--- a/artsupplies.html
+++ b/artsupplies.html
@@ -125,14 +125,9 @@
   </nav>
 <section class="about-section">
     <div class="about-container">
-      <h1>Building Supplies</h1>
+      <h1>Arts and Projects Supplies</h1>
       <p>
-        Building supplies are essential for constructing and maintaining strong, safe, and sustainable structures. 
-        At STEMSupply, we provide a wide range of materials and tools needed for all types of construction projects. 
-        From foundational elements to finishing touches, our platform ensures that builders, architects, and DIY enthusiasts 
-        have access to reliable, high-quality supplies that meet the demands of every project.
-    </div>
-  </section>
+        Creative expression and hands-on projects are vital for student engagement and skill development. At STEMSupply, we supply a wide range of arts and craft materials, including paints, markers, paper, and modeling clay, to support the creative process. Our platform ensures that educators, students, and artists have access to quality supplies to bring their artistic ideas to life, from simple projects to elaborate designs.  </section>
 
   <section class="category-showcase">
     <div class="category-header">
@@ -141,29 +136,35 @@
   
     <div class="category-circles">
       <div class="circle-item">
+        <a href="3dprinting.html" class="circle-item">
+            <img src="3dprinting.png" alt="3D Printing">
+            <p>3D Printing</p>
+          </a>
+      </div>
+      <div class="circle-item">
         <a href="buildingsupplies.html" class="circle-item">
             <img src="buildingsupplies.png" alt="Building Supplies">
             <p>Building Supplies</p>
           </a>
       </div>
       <div class="circle-item">
-        <a href="hydraulics.html" class="circle-item">
-            <img src="hydraulics.png" alt="Hydraulics">
-            <p>Hydraulics</p>
+        <a href="desks.html" class="circle-item">
+            <img src="desks.png" alt="Desks and Tables">
+            <p>Desks and Tables</p>
           </a>
       </div>
       <div class="circle-item">
-        <a href="renewable-energy.html" class="circle-item">
-            <img src="renewable-energy.png" alt="Renewable Energy">
-            <p>Renewable Energy</p>
-          </a>
-      </div>
-      <div class="circle-item">
-        <a href="structures.html" class="circle-item">
-            <img src="structures.png" alt="Strcutres">
-            <p>Structures</p>
+        <a href="technologystorage.html" class="circle-item">
+            <img src="technologystorage.png" alt="Technology Storage">
+            <p>Technology and Device Storage</p>
           </a>          
         </div>
+        <div class="circle-item">
+            <a href="artsupplies.html" class="circle-item">
+                <img src="artsupplies.png" alt="Arts and Projects Supplies">
+                <p>Arts and Projects Supplies</p>
+              </a>          
+            </div>
       
     </div>
   </section>
