--- a/books.html
+++ b/books.html
@@ -25,8 +25,8 @@
     </div>
   </div>
 
-    <!-- Main Navigation Bar -->
-    <nav class="main-nav">
+      <!-- Main Navigation Bar -->
+      <nav class="main-nav">
         <ul class="nav-left">
           <li class="nav-item">
             <li class="nav-item" data-name="Science">
@@ -115,25 +115,25 @@
             </ul>
           </li>
         </ul>
+
     <div class="nav-right">
       <input type="text" id="searchInput" placeholder="Search entire store here..." class="search-input" />
       <i class="fas fa-search search-icon" onclick="performSearch()"></i>
+      <i class="fas fa-search search-icon"></i>
       <a href="cart.html">
-      <i class="fas fa-shopping-cart cart-icon"></i>
-    </a>
+        <i class="fas fa-shopping-cart cart-icon"></i>
+      </a>
     </div>
   </nav>
 <section class="about-section">
     <div class="about-container">
-      <h1>Building Supplies</h1>
+      <h1>Books</h1>
       <p>
-        Building supplies are essential for constructing and maintaining strong, safe, and sustainable structures. 
-        At STEMSupply, we provide a wide range of materials and tools needed for all types of construction projects. 
-        From foundational elements to finishing touches, our platform ensures that builders, architects, and DIY enthusiasts 
-        have access to reliable, high-quality supplies that meet the demands of every project.
+        Books are a gateway to knowledge, imagination, and personal growth. At STEMSupply, we offer a wide selection of educational, reference, and literature books that support learning across all disciplines. Whether for classroom reading, research, or personal enrichment, our platform ensures that students, educators, and libraries have easy access to high-quality books to enrich their educational experience.
+      </p>
     </div>
   </section>
-
+  
   <section class="category-showcase">
     <div class="category-header">
       <h2>Shop by Category</h2>
@@ -141,29 +141,35 @@
   
     <div class="category-circles">
       <div class="circle-item">
-        <a href="buildingsupplies.html" class="circle-item">
-            <img src="buildingsupplies.png" alt="Building Supplies">
-            <p>Building Supplies</p>
+        <a href="books.html" class="circle-item">
+            <img src="books.png" alt="Books">
+            <p>Books</p>
           </a>
       </div>
       <div class="circle-item">
-        <a href="hydraulics.html" class="circle-item">
-            <img src="hydraulics.png" alt="Hydraulics">
-            <p>Hydraulics</p>
+        <a href="posters.html" class="circle-item">
+            <img src="posters.png" alt="Posters and Banners">
+            <p>Posters and Banners</p>
           </a>
       </div>
       <div class="circle-item">
-        <a href="renewable-energy.html" class="circle-item">
-            <img src="renewable-energy.png" alt="Renewable Energy">
-            <p>Renewable Energy</p>
+        <a href="seating.html" class="circle-item">
+            <img src="seating.png" alt="Flexible Seating">
+            <p>Flexible Seating</p>
           </a>
       </div>
       <div class="circle-item">
-        <a href="structures.html" class="circle-item">
-            <img src="structures.png" alt="Strcutres">
-            <p>Structures</p>
+        <a href="desks.html" class="circle-item">
+            <img src="desks.png" alt="Desks and Tables">
+            <p>Desks and Tables</p>
           </a>          
         </div>
+        <div class="circle-item">
+            <a href="whiteboards.html" class="circle-item">
+                <img src="whiteboards.png" alt="Whiteboards">
+                <p>Whiteboards</p>
+              </a>          
+            </div>
       
     </div>
   </section>
@@ -218,65 +224,66 @@
   
 </section>
 </div>
-<footer class="site-footer">
-  <div class="back-to-top">
-  </div>
-
-  <div class="footer-content">
-    <div class="footer-columns">
-      <div class="footer-column">
-        <h4>Get to Know Us</h4>
-        <ul>
-          <li><a href="#">About STEMSupply</a></li>
-          <li><a href="#">Careers</a></li>
-          <li><a href="#">News</a></li>
-        </ul>
-      </div>
-      <div class="footer-column">
-        <h4>Work With Us</h4>
-        <ul>
-          <li><a href="#">Become a Partner</a></li>
-          <li><a href="#">Affiliate Program</a></li>
-          <li><a href="#">Promote STEM</a></li>
-        </ul>
-      </div>
-      <div class="footer-column">
-        <h4>Resources</h4>
-        <ul>
-          <li><a href="#">Help Center</a></li>
-          <li><a href="#">Shipping & Returns</a></li>
-          <li><a href="#">Accessibility</a></li>
-        </ul>
-      </div>
-      <div class="footer-column">
-        <h4>Connect</h4>
-        <ul>
-          <li><a href="#">Contact Us</a></li>
-          <li><a href="#">Instagram</a></li>
-          <li><a href="#">LinkedIn</a></li>
-        </ul>
+  
+  <footer class="site-footer">
+    <div class="back-to-top">
+    </div>
+  
+    <div class="footer-content">
+      <div class="footer-columns">
+        <div class="footer-column">
+          <h4>Get to Know Us</h4>
+          <ul>
+            <li><a href="#">About STEMSupply</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">News</a></li>
+          </ul>
+        </div>
+        <div class="footer-column">
+          <h4>Work With Us</h4>
+          <ul>
+            <li><a href="#">Become a Partner</a></li>
+            <li><a href="#">Affiliate Program</a></li>
+            <li><a href="#">Promote STEM</a></li>
+          </ul>
+        </div>
+        <div class="footer-column">
+          <h4>Resources</h4>
+          <ul>
+            <li><a href="#">Help Center</a></li>
+            <li><a href="#">Shipping & Returns</a></li>
+            <li><a href="#">Accessibility</a></li>
+          </ul>
+        </div>
+        <div class="footer-column">
+          <h4>Connect</h4>
+          <ul>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Instagram</a></li>
+            <li><a href="#">LinkedIn</a></li>
+          </ul>
+        </div>
       </div>
     </div>
-  </div>
-
-  <div class="footer-bottom">
-    <img src="logostem.jpg" alt="STEMSupply Logo" class="footer-logo" />
-    <div class="footer-meta">
-      <select>
-        <option>English</option>
-      </select>
-      <select>
-        <option>USD - U.S. Dollar</option>
-        <option>AED - AED Dirhams</option>
-      </select>
-      <select>
-        <option>United States</option>
-      </select>
+  
+    <div class="footer-bottom">
+      <img src="logostem.jpg" alt="STEMSupply Logo" class="footer-logo" />
+      <div class="footer-meta">
+        <select>
+          <option>English</option>
+        </select>
+        <select>
+          <option>USD - U.S. Dollar</option>
+          <option>AED - AED Dirhams</option>
+        </select>
+        <select>
+          <option>United States</option>
+        </select>
+      </div>
+      <p>© 2025 STEMSupply. All rights reserved.</p>
     </div>
-    <p>© 2025 STEMSupply. All rights reserved.</p>
-  </div>
-</footer>
-<script src="main.js"></script>
+  </footer>
+  <script src="main.js"></script>
 </body>
 </html>
 
