--- a/desks.html
+++ b/desks.html
@@ -125,12 +125,9 @@
   </nav>
 <section class="about-section">
     <div class="about-container">
-      <h1>Building Supplies</h1>
+      <h1>Desks and Tables</h1>
       <p>
-        Building supplies are essential for constructing and maintaining strong, safe, and sustainable structures. 
-        At STEMSupply, we provide a wide range of materials and tools needed for all types of construction projects. 
-        From foundational elements to finishing touches, our platform ensures that builders, architects, and DIY enthusiasts 
-        have access to reliable, high-quality supplies that meet the demands of every project.
+        Desks and tables are essential for creating productive and organized workspaces, whether in classrooms, offices, or home study areas. At STEMSupply, we offer a variety of high-quality, ergonomic desks and tables designed to support learning, collaboration, and creativity. Our platform ensures that educational and professional environments are equipped with durable and functional furniture to enhance focus and productivity.
     </div>
   </section>
 
