--- a/ourstory.html
+++ b/ourstory.html
@@ -125,97 +125,22 @@
   </nav>
 <section class="about-section">
     <div class="about-container">
-      <h1>Building Supplies</h1>
+      <h1>Our Story</h1>
       <p>
-        Building supplies are essential for constructing and maintaining strong, safe, and sustainable structures. 
-        At STEMSupply, we provide a wide range of materials and tools needed for all types of construction projects. 
-        From foundational elements to finishing touches, our platform ensures that builders, architects, and DIY enthusiasts 
-        have access to reliable, high-quality supplies that meet the demands of every project.
+        Our story begins at the American University in Dubai, where we, a group of four passionate third-year computer 
+        engineering students, are on a shared journey to explore and seize the countless opportunities ahead of us. As we 
+        dive deeper into the world of technology, we constantly seek new challenges that push the boundaries of our skills, 
+        creativity, and problem-solving abilities. With a strong foundation in computer engineering, we are excited to 
+        leverage our knowledge to innovate, collaborate, and bring impactful ideas to life. Along the way, we are discovering 
+        the endless possibilities that technology offers, from software development to hardware integration, and we are
+        committed to embracing every learning experience that comes our way. Whether it's through building cutting-edge 
+        projects, engaging in collaborative ventures, or exploring entrepreneurial opportunities, our goal is to make a positive 
+        impact, both within the tech community and beyond. Our passion for engineering, combined with our ambition to drive 
+        change, motivates us to work hard and pursue every opportunity with determination and enthusiasm.
+      </p>
     </div>
   </section>
 
-  <section class="category-showcase">
-    <div class="category-header">
-      <h2>Shop by Category</h2>
-    </div>
-  
-    <div class="category-circles">
-      <div class="circle-item">
-        <a href="buildingsupplies.html" class="circle-item">
-            <img src="buildingsupplies.png" alt="Building Supplies">
-            <p>Building Supplies</p>
-          </a>
-      </div>
-      <div class="circle-item">
-        <a href="hydraulics.html" class="circle-item">
-            <img src="hydraulics.png" alt="Hydraulics">
-            <p>Hydraulics</p>
-          </a>
-      </div>
-      <div class="circle-item">
-        <a href="renewable-energy.html" class="circle-item">
-            <img src="renewable-energy.png" alt="Renewable Energy">
-            <p>Renewable Energy</p>
-          </a>
-      </div>
-      <div class="circle-item">
-        <a href="structures.html" class="circle-item">
-            <img src="structures.png" alt="Strcutres">
-            <p>Structures</p>
-          </a>          
-        </div>
-      
-    </div>
-  </section>
-  
-<div class="product-grid">
-  <!-- Product 1 -->
-  <div class="product-card" onclick="this.classList.toggle('flipped')">
-    <div class="flip-inner">
-      <!-- Front side -->
-      <div class="flip-front">
-        <img src="earthandspaceitem1.PNG" alt="Earth and Space Science Class Pack" />
-        <h4>Earth and Space Science Class Pack</h4>
-        <p class="price">$1,149.00</p>
-      </div>
-  
-      <!-- Back side -->
-      <div class="flip-back">
-        <p>
-          Engage students in earth science and astronomy with a bundle that is out of this world!
-        </p>
-        <button onclick="addToCart('Earth and Space Science Class Pack', 1149, 'earthandspaceitem1.PNG', '35-010','')">
-          <i class="fas fa-shopping-cart cart-icon"></i>Add to Cart
-        </button>
-      </div>
-    </div>
-  </div>
-  
-
-  <!-- Product 2 -->
-  <div class="product-card" onclick="this.classList.toggle('flipped')">
-    <div class="flip-inner">
-      <!-- Front side -->
-      <div class="flip-front">
-        <img src="earthandspaceitem2.PNG" alt="Human Activity and Environment Kit" />
-        <h4>Human Acitivity and Environment Kit</h4>
-        <p class="price">$149.00</p>
-      </div>
-  
-      <!-- Back side -->
-      <div class="flip-back">
-        <p>
-          Active lessons demonstrate the impact of humans and the environment.
-        </p>
-        <button onclick="addToCart('Human Activity and Environment Kit', 149, 'earthandspaceitem2.PNG', '35-110', '')">
-          <i class="fas fa-shopping-cart cart-icon"></i>Add to Cart
-        </button>
-      </div>
-    </div>
-  </div>
-  
-
-  
 </section>
 </div>
 <footer class="site-footer">
