--- a/puzzles.html
+++ b/puzzles.html
@@ -25,8 +25,8 @@
     </div>
   </div>
 
-    <!-- Main Navigation Bar -->
-    <nav class="main-nav">
+      <!-- Main Navigation Bar -->
+      <nav class="main-nav">
         <ul class="nav-left">
           <li class="nav-item">
             <li class="nav-item" data-name="Science">
@@ -115,6 +115,7 @@
             </ul>
           </li>
         </ul>
+
     <div class="nav-right">
       <input type="text" id="searchInput" placeholder="Search entire store here..." class="search-input" />
       <i class="fas fa-search search-icon" onclick="performSearch()"></i>
@@ -125,13 +126,9 @@
   </nav>
 <section class="about-section">
     <div class="about-container">
-      <h1>Building Supplies</h1>
+      <h1>Puzzle Games</h1>
       <p>
-        Building supplies are essential for constructing and maintaining strong, safe, and sustainable structures. 
-        At STEMSupply, we provide a wide range of materials and tools needed for all types of construction projects. 
-        From foundational elements to finishing touches, our platform ensures that builders, architects, and DIY enthusiasts 
-        have access to reliable, high-quality supplies that meet the demands of every project.
-    </div>
+        Puzzles are a great way to improve cognitive skills, patience, and problem-solving abilities. At STEMSupply, we offer a wide variety of puzzles for all age groups, from simple jigsaw puzzles to complex brain teasers. Our platform ensures that students, educators, and puzzle enthusiasts have the resources needed to challenge their minds and enjoy hours of engaging, educational entertainment.    </div>
   </section>
 
   <section class="category-showcase">
@@ -141,30 +138,30 @@
   
     <div class="category-circles">
       <div class="circle-item">
-        <a href="buildingsupplies.html" class="circle-item">
-            <img src="buildingsupplies.png" alt="Building Supplies">
-            <p>Building Supplies</p>
+        <a href="boardgames.html" class="circle-item">
+            <img src="boardgames.png" alt="Board Games">
+            <p>Board Games</p>
           </a>
       </div>
       <div class="circle-item">
-        <a href="hydraulics.html" class="circle-item">
-            <img src="hydraulics.png" alt="Hydraulics">
-            <p>Hydraulics</p>
+        <a href="puzzles.html" class="circle-item">
+            <img src="puzzles.png" alt="Puzzle Games">
+            <p>Puzzles</p>
           </a>
       </div>
       <div class="circle-item">
-        <a href="renewable-energy.html" class="circle-item">
-            <img src="renewable-energy.png" alt="Renewable Energy">
-            <p>Renewable Energy</p>
+        <a href="kinesthetic.html" class="circle-item">
+            <img src="kinesthetic.png" alt="Kinesthetic Games">
+            <p>Kinesthetic Games</p>
           </a>
       </div>
       <div class="circle-item">
-        <a href="structures.html" class="circle-item">
-            <img src="structures.png" alt="Strcutres">
-            <p>Structures</p>
+        <a href="mathgames.html" class="circle-item">
+            <img src="mathgames.png" alt="Math Games">
+            <p>Math Games</p>
           </a>          
         </div>
-      
+
     </div>
   </section>
   
