--- a/science.html
+++ b/science.html
@@ -25,11 +25,11 @@
     </div>
   </div>
 
-  <!-- Main Navigation Bar -->
-  <nav class="main-nav">
-    <ul class="nav-left">
-      <li class="nav-item">
-        <li class="nav-item" data-name="Science">
+    <!-- Main Navigation Bar -->
+    <nav class="main-nav">
+      <ul class="nav-left">
+        <li class="nav-item">
+          <li class="nav-item" data-name="Science">
           <a href="science.html">Science</a>
           <ul class="dropdown-menu">
             <li><a href="earth-space.html">Earth and Space Science</a></li>
@@ -69,43 +69,52 @@
             <li><a href="timeandmoney.html">Time And Money</a></li>
           </ul>
         </li>
-        <li class="nav-item" data-name="Makerspace">
-        <a href="makerspace.html">Makerspace</a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Craft Kits</a></li>
-          <li><a href="#">Electronics</a></li>
-        </ul>
-      </li>
-        <li class="nav-item" data-name="Afterschool">
-        <a href="afterschool.html">Afterschool</a>
-        <ul class="dropdown-menu">
-          <li><a href="#">STEM Clubs</a></li>
-          <li><a href="#">Programs</a></li>
-        </ul>
-      </li>
-        <li class="nav-item" data-name="Collaborative Workspace">
-            <a href="collaborative.html">Collaborative Workspace</a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Desks</a></li>
-          <li><a href="#">Boards</a></li>
-        </ul>
-      </li>
-        <li class="nav-item" data-name="Outdoor Classroom">
-        <a href="outdoor.html">Outdoor Classroom</a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Gardening</a></li>
-          <li><a href="#">Exploration Kits</a></li>
-        </ul>
-      </li>
-        <li class="nav-item" data-name="About Us">
-        <a href="about.html">About Us</a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Our Story</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </li>
-    </ul>
-
+          <li class="nav-item" data-name="Makerspace">
+          <a href="makerspace.html">Makerspace</a>
+          <ul class="dropdown-menu">
+            <li><a href="3dprinting.html">3D Printing</a></li>
+            <li><a href="buildingsupplies.html">Building Supplies</a></li>
+            <li><a href="desks.html">Desks and Tables</a></li>
+            <li><a href="technologystorage.html">Technology and Device Storage</a></li>
+            <li><a href="artsupplies.html">Art and Project Supplies</a></li>
+          </ul>
+        </li>
+          <li class="nav-item" data-name="Afterschool">
+          <a href="afterschool.html">Afterschool</a>
+          <ul class="dropdown-menu">
+            <li><a href="boardgames.html">Board Games</a></li>
+            <li><a href="puzzles.html">Puzzles</a></li>
+            <li><a href="kinesthetic.html">Kinesthetic Games</a></li>
+            <li><a href="mathgames.html">Math Games</a></li>
+          </ul>
+        </li>
+          <li class="nav-item" data-name="Collaborative Workspace">
+              <a href="collaborative.html">Collaborative Workspace</a>
+          <ul class="dropdown-menu">
+            <li><a href="books.html">Books</a></li>
+            <li><a href="posters.html">Posters and Banners</a></li>
+            <li><a href="seating.html">Flexible Seating</a></li>
+            <li><a href="desks.html">Desks and Tables</a></li>
+            <li><a href="whiteboards.html">Whiteboards</a></li>
+          </ul>
+        </li>
+          <li class="nav-item" data-name="Outdoor Classroom">
+          <a href="outdoor.html">Outdoor Classroom</a>
+          <ul class="dropdown-menu">
+            <li><a href="gardening.html">Gardening</a></li>
+            <li><a href="earth-science.html">Earth Science and Weather</a></li>
+            <li><a href="music.html">Music and STEAM</a></li>
+            <li><a href="enrichment.html">Enrichment Programs</a></li>
+          </ul>
+        </li>
+          <li class="nav-item" data-name="About Us">
+          <a href="about.html">About Us</a>
+          <ul class="dropdown-menu">
+            <li><a href="ourstory.html">Our Story</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </li>
+      </ul>
     <div class="nav-right">
       <input type="text" id="searchInput" placeholder="Search entire store here..." class="search-input" />
       <i class="fas fa-search search-icon" onclick="performSearch()"></i>
