--- a/technologystorage.html
+++ b/technologystorage.html
@@ -125,13 +125,9 @@
   </nav>
 <section class="about-section">
     <div class="about-container">
-      <h1>Building Supplies</h1>
+      <h1>Technology and Device Storage</h1>
       <p>
-        Building supplies are essential for constructing and maintaining strong, safe, and sustainable structures. 
-        At STEMSupply, we provide a wide range of materials and tools needed for all types of construction projects. 
-        From foundational elements to finishing touches, our platform ensures that builders, architects, and DIY enthusiasts 
-        have access to reliable, high-quality supplies that meet the demands of every project.
-    </div>
+        Efficient storage solutions for technology and devices are crucial for maintaining organization and protecting valuable equipment. At STEMSupply, we provide a range of storage options, from secure lockers to charging stations, designed to keep laptops, tablets, and other devices safe and accessible. Our platform ensures that schools, offices, and tech-savvy environments have the necessary tools to manage and store their technology effectively.    </div>
   </section>
 
   <section class="category-showcase">
@@ -141,29 +137,35 @@
   
     <div class="category-circles">
       <div class="circle-item">
+        <a href="3dprinting.html" class="circle-item">
+            <img src="3dprinting.png" alt="3D Printing">
+            <p>3D Printing</p>
+          </a>
+      </div>
+      <div class="circle-item">
         <a href="buildingsupplies.html" class="circle-item">
             <img src="buildingsupplies.png" alt="Building Supplies">
             <p>Building Supplies</p>
           </a>
       </div>
       <div class="circle-item">
-        <a href="hydraulics.html" class="circle-item">
-            <img src="hydraulics.png" alt="Hydraulics">
-            <p>Hydraulics</p>
+        <a href="desks.html" class="circle-item">
+            <img src="desks.png" alt="Desks and Tables">
+            <p>Desks and Tables</p>
           </a>
       </div>
       <div class="circle-item">
-        <a href="renewable-energy.html" class="circle-item">
-            <img src="renewable-energy.png" alt="Renewable Energy">
-            <p>Renewable Energy</p>
-          </a>
-      </div>
-      <div class="circle-item">
-        <a href="structures.html" class="circle-item">
-            <img src="structures.png" alt="Strcutres">
-            <p>Structures</p>
+        <a href="technologystorage.html" class="circle-item">
+            <img src="technologystorage.png" alt="Technology Storage">
+            <p>Technology and Device Storage</p>
           </a>          
         </div>
+        <div class="circle-item">
+            <a href="artsupplies.html" class="circle-item">
+                <img src="artsupplies.png" alt="Arts and Projects Supplies">
+                <p>Arts and Projects Supplies</p>
+              </a>          
+            </div>
       
     </div>
   </section>
