--- a/enrichment.html
+++ b/enrichment.html
@@ -24,7 +24,7 @@
       <a href="signin.html">Sign In</a> or <a href="create-account.html">Create an Account</a>
     </div>
   </div>
-  
+
     <!-- Main Navigation Bar -->
     <nav class="main-nav">
       <ul class="nav-left">
@@ -117,76 +117,106 @@
       </ul>
 
     <div class="nav-right">
-      <input type="text" id="searchInput" placeholder="Search entire store here..." class="search-input"/>
+      <input type="text" id="searchInput" placeholder="Search entire store here..." class="search-input" />
       <i class="fas fa-search search-icon" onclick="performSearch()"></i>
-      <i class="fas fa-shopping-cart cart-icon"></i>
+      <a href="cart.html">
+        <i class="fas fa-shopping-cart cart-icon"></i>
+      </a>
     </div>
   </nav>
-  <!-- About STEMSupply Section -->
 <section class="about-section">
     <div class="about-container">
-      <h1>About STEMSupply</h1>
+      <h1>Enrichment Programs</h1>
       <p>
-        STEMSupply is a supply chain management system designed specifically for STEM fields, offering both products 
-        (e.g., lab equipment, electronic components, software licenses) and services (e.g., device calibration, lab maintenance, 
-        prototyping services). The goal of the system is to streamline the procurement process, ensuring timely delivery, transparency 
-        in supply chains, and optimized inventory management.
-      </p>
+        Enrichment programs provide students with opportunities to expand their learning beyond the traditional curriculum, offering a chance to explore new skills and interests. At STEMSupply, we support a variety of enrichment activities, from STEM-focused workshops to creative arts and leadership training. Our platform ensures that schools and organizations have access to the resources needed to run enriching programs that inspire students and foster lifelong learning.
+    </section>
+
+  <section class="category-showcase">
+    <div class="category-header">
+      <h2>Shop by Category</h2>
+    </div>
+  
+    <div class="category-circles">
+      <div class="circle-item">
+        <a href="gardening.html" class="circle-item">
+            <img src="gardening.png" alt="Gardening">
+            <p>Gardening</p>
+          </a>
+      </div>
+      <div class="circle-item">
+        <a href="earth-science.html" class="circle-item">
+            <img src="earth-science.png" alt="Earth Science and Weather">
+            <p>Earth Science and Weather</p>
+          </a>
+      </div>
+      <div class="circle-item">
+        <a href="music.html" class="circle-item">
+            <img src="music.png" alt="Music and STEAM">
+            <p>Music and STEAM</p>
+          </a>
+      </div>
+      <div class="circle-item">
+        <a href="enrichment.html" class="circle-item">
+            <img src="enrichment.png" alt="Enrichment Programs">
+            <p>Enrichment Programs</p>
+          </a>          
+        </div>
+      
     </div>
   </section>
-  <!-- Category Cards Section -->
-<section class="category-grid">
-    <div class="category-card">
-      <h3>Science</h3>
-      <img src="scienceimage.png" alt="Science">
-      <a href="science.html">Explore Science</a>
-    </div>
   
-    <div class="category-card">
-      <h3>Technology</h3>
-      <img src="technologyimage.png" alt="Technology">
-      <a href="technology.html">Explore Technology</a>
-    </div>
+<div class="product-grid">
+  <!-- Product 1 -->
+  <div class="product-card" onclick="this.classList.toggle('flipped')">
+    <div class="flip-inner">
+      <!-- Front side -->
+      <div class="flip-front">
+        <img src="earthandspaceitem1.PNG" alt="Earth and Space Science Class Pack" />
+        <h4>Earth and Space Science Class Pack</h4>
+        <p class="price">$1,149.00</p>
+      </div>
   
-    <div class="category-card">
-      <h3>Engineering</h3>
-      <img src="engineeringphoto.png" alt="Engineering">
-      <a href="engineering.html">Explore Engineering</a>
+      <!-- Back side -->
+      <div class="flip-back">
+        <p>
+          Engage students in earth science and astronomy with a bundle that is out of this world!
+        </p>
+        <button onclick="addToCart('Earth and Space Science Class Pack', 1149, 'earthandspaceitem1.PNG', '35-010','')">
+          <i class="fas fa-shopping-cart cart-icon"></i>Add to Cart
+        </button>
+      </div>
     </div>
+  </div>
   
-    <div class="category-card">
-      <h3>Mathematics</h3>
-      <img src="mathimage.png" alt="Mathematics">
-      <a href="mathematics.html">Explore Mathematics</a>
-    </div>
-  
-    <div class="category-card">
-      <h3>Makerspace</h3>
-      <img src="makerspaceimage.png" alt="Makerspace">
-      <a href="makerspace.html">Explore Makerspace</a>
-    </div>
-  
-    <div class="category-card">
-      <h3>Afterschool</h3>
-      <img src="afterschool.PNG" alt="Afterschool">
-      <a href="afterschool.html">Explore Afterschool</a>
-    </div>
 
-    <div class="category-card">
-        <h3>Collaborative Workspace</h3>
-        <img src="collaborativeimage.png" alt="Collaborative Workspace">
-        <a href="collaborative.html">Explore Collaborative Workspace</a>
+  <!-- Product 2 -->
+  <div class="product-card" onclick="this.classList.toggle('flipped')">
+    <div class="flip-inner">
+      <!-- Front side -->
+      <div class="flip-front">
+        <img src="earthandspaceitem2.PNG" alt="Human Activity and Environment Kit" />
+        <h4>Human Acitivity and Environment Kit</h4>
+        <p class="price">$149.00</p>
+      </div>
+  
+      <!-- Back side -->
+      <div class="flip-back">
+        <p>
+          Active lessons demonstrate the impact of humans and the environment.
+        </p>
+        <button onclick="addToCart('Human Activity and Environment Kit', 149, 'earthandspaceitem2.PNG', '35-110', '')">
+          <i class="fas fa-shopping-cart cart-icon"></i>Add to Cart
+        </button>
+      </div>
     </div>
+  </div>
+  
 
-    <div class="category-card">
-        <h3>Outdoor Classroom</h3>
-        <img src="outdoorclass.png" alt="Outdoor Classroom">
-        <a href="outdoor.html">Explore Outdoor Classroom</a>
-    </div>
-</section>  
-  <!-- Sticky Footer -->
-<!-- FOOTER -->
-<footer class="site-footer">
+  
+</section>
+</div>
+
+  <footer class="site-footer">
     <div class="back-to-top">
     </div>
   
@@ -238,7 +268,7 @@
           <option>AED - AED Dirhams</option>
         </select>
         <select>
-          <option>United Arab Emirates</option>
+          <option>United States</option>
         </select>
       </div>
       <p>© 2025 STEMSupply. All rights reserved.</p>
